--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,11 @@
 name: xeus-python-kernel
 channels:
-  - https://repo.mamba.pm/emscripten-forge
   - https://repo.mamba.pm/conda-forge
+  - https://repo.mamba.pm/emscripten-forge
 dependencies:
-  - ipycanvas
-  - ipywidgets
-  - numpy
-  - matplotlib
-  - pymc
-  - pyro-ppl
-  - scanpy
-  - seaborn
-  - statsmodels
+  - conda-forge::ipywidgets
+  - conda-forge::numpy
+  - conda-forge::matplotlib
+  - conda-forge::seaborn
+  - conda-forge::statsmodels
+  - conda-forge::pandas
