--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,25 +14,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Install mamba
-        uses: mamba-org/setup-micromamba@v1
-        with:
-          micromamba-version: '1.5.0-0'
-          environment-file: build-environment.yml
-          cache-environment: true
-
+      - name: Install the dependencies
+        run: |
+          python -m pip install -r requirements.txt
       - name: Build the JupyterLite site
-        shell: bash -l {0}
         run: |
           cp README.md content
           jupyter lite build --contents content --output-dir dist
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
